# lawd_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lawd_ctrl/share/lawd_ctrl/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/lawd_description/share/lawd_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lawd_msgs/share/lawd_msgs/: local_setup.sh  package.bash  package.ps1  package.sh  package.xml  package.zsh
install/lawd_teleop/share/lawd_teleop/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  (+1 more)
log/: latest_build
src/gazebo_plugins/: CMakeLists.txt  package.xml
src/gazebo_plugins/src/: lift_drag_plugin.cc
src/lawd_ctrl/: CMakeLists.txt
src/lawd_ctrl/IK/: InverseKinematics.py  inverse_kinematics_node.py
src/lawd_description/: CMakeLists.txt
src/lawd_description/config/: display.rviz
src/lawd_description/launch/: display.launch.py  launch_sim.launch.py  rsp.launch.py
src/lawd_description/meshes/: back_left_first_1.stl  back_left_prop_1.stl  back_left_sec_1.stl  back_right_first_1.stl  back_right_prop_1.stl  back_right_sec_1.stl  back_right_wing_1.stl  front_left_prop_1.stl  front_left_wing_1.stl  front_right_prop_1.stl  front_right_wing_1.stl
src/lawd_description/urdf/: lawd.gazebo  lawd.xacro  lawd_ros2_control.xacro  lawd_urdf_links.xacro  materials.xacro
src/lawd_msgs/: CMakeLists.txt
src/lawd_teleop/: CMakeLists.txt
(+61 files in other folders)
